# HM2J_c

./: .gitignore  1차 프로젝트_계획서 1조.hwp  1차 프로젝트_기술서 1조.hwp  CMakeLists.txt  README.md
include/: db.h  test.h
sql/: user_config.sql
src/: db.c  display_menu.c  display_tetris.c  main.c  new.c  result.c  update.c
